fix: resolve error in middleware and generate new swagger docs
