# backend/docs/swagger.yaml
@@ -24,6 +24,8 @@ definitions:
     type: object
   api.History:
     properties:
+      id:
+        type: string
       latest_content:
         type: string
       latest_created_at:
@@ -156,8 +158,7 @@ paths:
         "200":
           description: User info from Google
           schema:
-            additionalProperties: true
-            type: object
+            $ref: '#/definitions/api.ErrorResponse'
         "400":
           description: Bad request - invalid or missing Google OAuth token
           schema:
@@ -247,31 +248,6 @@ paths:
       summary: Register a new user
       tags:
       - auth
-  /chat/histories:
-    get:
-      consumes:
-      - application/json
-      description: Retrieves the chat histories for the logged-in user
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: Successful retrieval of chat histories
-          schema:
-            $ref: '#/definitions/api.getChatsHistoriesResponse'
-        "401":
-          description: Unauthorized - Invalid or missing JWT token
-          schema:
-            $ref: '#/definitions/api.ErrorResponse'
-        "500":
-          description: Internal server error
-          schema:
-            $ref: '#/definitions/api.ErrorResponse'
-      security:
-      - ApiKeyAuth: []
-      summary: Get chat histories
-      tags:
-      - chat
   /chats/{uid}:
     get:
       consumes:
@@ -310,6 +286,31 @@ paths:
       security:
       - ApiKeyAuth: []
       summary: Get chat details
+      tags:
+      - chat
+  /chats/histories:
+    get:
+      consumes:
+      - application/json
+      description: Retrieves the chat histories for the logged-in user
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Successful retrieval of chat histories
+          schema:
+            $ref: '#/definitions/api.getChatsHistoriesResponse'
+        "401":
+          description: Unauthorized - Invalid or missing JWT token
+          schema:
+            $ref: '#/definitions/api.ErrorResponse'
+        "500":
+          description: Internal server error
+          schema:
+            $ref: '#/definitions/api.ErrorResponse'
+      security:
+      - ApiKeyAuth: []
+      summary: Get chat histories
       tags:
       - chat
   /users:
